2005-03-28  Jeff Hobbs  <jeffh@ActiveState.com>

	* configure, configure.in:
	* Makefile.in (PKG_OBJECTS): add @LIBOBJS@ to needed objects.

2005-03-25  Jeff Hobbs  <jeffh@ActiveState.com>

	* configure, configure.in: AC_PROG_LN_S no longer needed
	* tests/help.test: correct help tests to use correct help dir
	* Makefile.in: doc target cleanup (das)
	Add helpclean target and make help not rebuild always.
	Add TCLX_HELP_DIR to TCLSH_ENV.

	* license.terms (new): minimal license terms file

	* library/buildhelp.tcl (buildhelp): redir 2>/dev/null for exec
	col check. (das)

	* unix/tclXunixPort.h: undef panic for __APPLE__ (das)

2005-03-24  Jeff Hobbs  <jeffh@ActiveState.com>

	* Makefile.in, tclconfig/tcl.m4: Get AIX wide int type right.
	* configure, configure.in:       Use 'tclx' PACKAGE_NAME, but load
	'Tclx'.

2005-03-23  Jeff Hobbs  <jeffh@ActiveState.com>

	* Makefile.in, tclconfig/tcl.m4: Update to TEA 3.2, refactoring
	* configure, configure.in:       some #defines.  Still needs to
	have header usage on AIX checked, where 'kill' in tclXsignal is
	crashing the test suite.
	* pkgIndex.tcl.in, tclconfig/ChangeLog (removed):
	* generic/tclXinit.c: use TEA3 define names (PACKAGE_*)
	* generic/tclXselect.c: remove NO_SYS_SELECT_H, rely on
	HAVE_SYS_SELECT_H from tcl's tclUnixPort.h
	* win/tclXwinPort.h: remove NO_SYS_SELECT_H define
	* unix/tclXunixPort.h: remove NO_FLOOR_PROTO_ check

	* generic/tclXkeylist.c (DeleteKeyedListEntry): fix hash
	consistency checks when missing cached entry.

	* generic/tclXlib.c: remove trailing , in enum typdef

2005-03-18  Jeff Hobbs  <jeffh@ActiveState.com>

	* Makefile.in (AR): use @AR@

2005-03-16  Jeff Hobbs  <jeffh@ActiveState.com>

	* generic/tclXmath.c: add ability to handle wide values in min/max
	math functions and commands.
	Merged TclX_MinFunc and TclX_MaxFunc into TclX_MinMaxFunc.

2005-02-07  Andreas Kupries <andreask@activestate.com>

	* generic/tclXkeylist.c (FindKeyedListEntry): Moved a C99 specific